--- a/.github/workflows/validate-terraform.yaml
+++ b/.github/workflows/validate-terraform.yaml
@@ -31,6 +31,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    needs: derive-tf-versions
     strategy:
       matrix:
         stack:
