--- a/.github/workflows/cicd-pipeline.yaml
+++ b/.github/workflows/cicd-pipeline.yaml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   get-metadata:
+    name: Get meta data
     runs-on: ubuntu-latest
     outputs:
       build_datetime: ${{ steps.metadata.outputs.build_datetime }}
@@ -28,12 +29,16 @@ jobs:
           echo "python_version=$(grep python .tool-versions | cut -f2 -d' ')" >> $GITHUB_OUTPUT
           echo "terraform_version=$(grep terraform .tool-versions | cut -f2 -d' ')" >> $GITHUB_OUTPUT
   scan-secrets:
+    name: Scan code for secrets
     uses: ./.github/workflows/scan-secrets.yaml
   check-file-format:
+    name: Check general formatting
     uses: ./.github/workflows/check-file-format.yaml
   check-markdown-format:
+    name: Check format of markdown files
     uses: ./.github/workflows/check-markdown-format.yaml
   check-terraform-format:
+    name: Check format of terraform code
     uses: ./.github/workflows/check-terraform-format.yaml
   validate-terraform:
     name: Validate terraform code
@@ -42,14 +47,19 @@ jobs:
       ENV: dev
     secrets: inherit
   check-python-black-format:
-      uses: ./.github/workflows/check-python-black-format.yaml
+    name: Check format of python code (black)
+    uses: ./.github/workflows/check-python-black-format.yaml
   check-python-flake-rules:
-      uses: ./.github/workflows/check-python-flake-rules.yaml
+    name: Check python code quality (flake)
+    uses: ./.github/workflows/check-python-flake-rules.yaml
   cloc-repository:
+    name: Count lines of code
     uses: ./.github/workflows/cloc-repository.yaml
   scan-dependencies:
+    name: Scan dependencies
     uses: ./.github/workflows/scan-dependencies.yaml
   cicd-pipeline-test:
+    name: Run unit tests
     runs-on: ubuntu-latest
     needs:
       [
