--- a/.github/workflows/cicd-pipeline.yaml
+++ b/.github/workflows/cicd-pipeline.yaml
@@ -94,6 +94,6 @@ jobs:
     with:
       github_environment: dev
       stack: application
-      action: apply
+      action: plan
       tf_vers: ${{needs.derive-tf-versions.outputs.maxVersion}}
     secrets: inherit
