--- a/.github/workflows/deploy-service-management-domain.yaml
+++ b/.github/workflows/deploy-service-management-domain.yaml
@@ -67,4 +67,4 @@ jobs:
           then
             export DEPLOYMENT_WORKSPACE=${{ inputs.deployment_workspace }}
           fi
-          /bin/bash ./scripts/infra-deploy.sh
+          /bin/bash ./scripts/action-infra-stack.sh
