DR-308 Initial ui dev env

--- a/.github/workflows/cicd-pipeline.yaml
+++ b/.github/workflows/cicd-pipeline.yaml
@@ -100,4 +100,5 @@ jobs:
       stack: application
       action: plan
       tf_vers: ${{needs.derive-tf-versions.outputs.maxVersion}}
+      deployment_workspace: ${{ github.ref_name }}
     secrets: inherit
