--- a/.github/workflows/validate-terraform.yaml
+++ b/.github/workflows/validate-terraform.yaml
@@ -6,24 +6,11 @@ on:
       ENV:
         required: true
         type: string
+      tf_vers:
+        required: true
+        type: string
 
 jobs:
-
-  derive-tf-versions:
-    name: Derive Max Terraform Versions
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Extract Terraform min/max versions
-        id: minMax
-        uses: clowdhaus/terraform-min-max@main
-        with:
-          directory: ./infrastructure/remote
-    outputs:
-      maxVersion: ${{ steps.minMax.outputs.maxVersion }}
-
   validate-against-tf-versions:
     name: Validate terraform against the min/max versions
     runs-on: ubuntu-latest
@@ -31,11 +18,11 @@ jobs:
     permissions:
       id-token: write
       contents: read
-    needs: derive-tf-versions
     strategy:
       matrix:
         stack:
           - github-runner
+          - terraform_management
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -47,14 +34,14 @@ jobs:
           role-session-name: github-pipeline-session
           aws-region: eu-west-2
 
-      - name: Install Terraform v${{ needs.derive-tf-versions.outputs.maxVersion }}
+      - name: Install Terraform v${{ inputs.tf_vers }}
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: ${{ needs.derive-tf-versions.outputs.maxVersion }}
+          terraform_version: ${{ inputs.tf_vers }}
 
       - name: Initialize terraform and validate stack ${{ matrix.stack }} against v${{ needs.derive-tf-versions.outputs.maxVersion }}
         run: |
           export ACTION=validate
           export STACK=${{ matrix.stack }}
           export ACCOUNT_TYPE=${{ vars.ACCOUNT_TYPE }}
-          /bin/bash ./scripts/infra-deploy.sh
+          /bin/bash ./scripts/action-infra-stack.sh
