DR-436 Add test to bootstrap workflow

--- a/.github/workflows/pipeline-deploy-bootstrap.yaml
+++ b/.github/workflows/pipeline-deploy-bootstrap.yaml
@@ -12,3 +12,9 @@ jobs:
       with:
         ENV: dev
       secrets: inherit
+    deploy-bootstrap-dos-test:
+      name: Run bootstrap for dos test account
+      uses: ./.github/workflows/deploy-bootstrap.yaml
+      with:
+        ENV: test
+      secrets: inherit
