--- a/.github/workflows/validate-terraform.yaml
+++ b/.github/workflows/validate-terraform.yaml
@@ -11,8 +11,8 @@ on:
         type: string
 
 jobs:
-  validate-against-tf-versions:
-    name: Validate terraform against the max version
+  validate-boostrap-terraform:
+    name: Validate bootstrap terraform against the max version
     runs-on: ubuntu-latest
     environment: ${{ inputs.ENV }}
     permissions:
@@ -23,6 +23,39 @@ jobs:
         stack:
           - github-runner
           - terraform_management
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2.2.0
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_ID }}:role/uec-dos-user-interfaces-github-runner
+          role-session-name: github-pipeline-session
+          aws-region: ${{ vars.AWS_REGION }}
+
+      - name: Install Terraform v${{ inputs.tf_vers }}
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ inputs.tf_vers }}
+
+      - name: Initialize terraform and validate stack ${{ matrix.stack }} against v${{ needs.derive-tf-versions.outputs.maxVersion }}
+        run: |
+          export ACTION=validate
+          export STACK=${{ matrix.stack }}
+          export ACCOUNT_TYPE=${{ vars.ACCOUNT_TYPE }}
+          export DEPLOYMENT_WORKSPACE=default
+          /bin/bash ./scripts/action-infra-stack.sh
+  validate-application-terraform:
+    name: Validate application terraform against the max version
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.ENV }}
+    permissions:
+      id-token: write
+      contents: read
+    strategy:
+      matrix:
+        stack:
           - application
     steps:
       - name: Checkout
@@ -33,7 +66,7 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_ID }}:role/uec-dos-user-interfaces-github-runner
           role-session-name: github-pipeline-session
-          aws-region: eu-west-2
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Install Terraform v${{ inputs.tf_vers }}
         uses: hashicorp/setup-terraform@v2
