--- a/.github/workflows/deploy-bootstrap.yaml
+++ b/.github/workflows/deploy-bootstrap.yaml
@@ -1,16 +1,27 @@
-name: Run bootstrapper
+name: Deploy Bootstrapper
 
 on:
   workflow_call:
     inputs:
-      ENV:
+      github_environment:
+        required: true
+        type: string
+      tf_version:
         required: true
         type: string
 
 jobs:
+  get-metadata:
+    name: Get metadata
+    runs-on: ubuntu-latest
+    steps:
+      - id: metadata
+        run: |
+          echo "github environment: ${{ inputs.github_environment }}"
+          echo "terraform version: ${{ inputs.tf_version }}"
   run-bootstrap:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.ENV }}
+    environment: ${{ inputs.github_environment }}
     permissions:
       id-token: write
       contents: read
@@ -21,14 +32,14 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: ${{ vars.TF_VERSION }}
+          terraform_version: ${{ inputs.tf_version }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2.2.0
         with:
           role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_ID }}:role/uec-dos-user-interfaces-github-runner
           role-session-name: github-pipeline-session
-          aws-region: eu-west-2
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Run bootstrapper
         run: |
