--- a/.github/workflows/validate-terraform.yaml
+++ b/.github/workflows/validate-terraform.yaml
@@ -6,36 +6,23 @@ on:
       ENV:
         required: true
         type: string
+      tf_vers:
+        required: true
+        type: string
 
 jobs:
-
-  derive-tf-versions:
-    name: Derive Max Terraform Versions
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Extract Terraform min/max versions
-        id: minMax
-        uses: clowdhaus/terraform-min-max@main
-        with:
-          directory: ./infrastructure/remote
-    outputs:
-      maxVersion: ${{ steps.minMax.outputs.maxVersion }}
-
-  validate-against-tf-versions:
-    name: Validate terraform against the min/max versions
+  validate-bootstrap-terraform:
+    name: Validate bootstrap terraform against the max version
     runs-on: ubuntu-latest
     environment: ${{ inputs.ENV }}
     permissions:
       id-token: write
       contents: read
-    needs: derive-tf-versions
     strategy:
       matrix:
         stack:
           - github-runner
+          - terraform_management
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -45,16 +32,50 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_ID }}:role/uec-dos-user-interfaces-github-runner
           role-session-name: github-pipeline-session
-          aws-region: eu-west-2
+          aws-region: ${{ vars.AWS_REGION }}
 
-      - name: Install Terraform v${{ needs.derive-tf-versions.outputs.maxVersion }}
+      - name: Install Terraform v${{ inputs.tf_vers }}
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: ${{ needs.derive-tf-versions.outputs.maxVersion }}
+          terraform_version: ${{ inputs.tf_vers }}
 
       - name: Initialize terraform and validate stack ${{ matrix.stack }} against v${{ needs.derive-tf-versions.outputs.maxVersion }}
         run: |
           export ACTION=validate
           export STACK=${{ matrix.stack }}
           export ACCOUNT_TYPE=${{ vars.ACCOUNT_TYPE }}
-          /bin/bash ./scripts/infra-deploy.sh
+          export DEPLOYMENT_WORKSPACE=default
+          /bin/bash ./scripts/action-infra-stack.sh
+  validate-application-terraform:
+    name: Validate application terraform against the max version
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.ENV }}
+    permissions:
+      id-token: write
+      contents: read
+    strategy:
+      matrix:
+        stack:
+          - application
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2.2.0
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_ID }}:role/uec-dos-user-interfaces-github-runner
+          role-session-name: github-pipeline-session
+          aws-region: ${{ vars.AWS_REGION }}
+
+      - name: Install Terraform v${{ inputs.tf_vers }}
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ inputs.tf_vers }}
+
+      - name: Initialize terraform and validate stack ${{ matrix.stack }} against v${{ needs.derive-tf-versions.outputs.maxVersion }}
+        run: |
+          export ACTION=validate
+          export STACK=${{ matrix.stack }}
+          export ACCOUNT_TYPE=${{ vars.ACCOUNT_TYPE }}
+          /bin/bash ./scripts/action-infra-stack.sh
