--- a/.github/workflows/pipeline-deploy-bootstrap.yaml
+++ b/.github/workflows/pipeline-deploy-bootstrap.yaml
@@ -6,15 +6,22 @@ on:
       - 'main'
 
 jobs:
-    deploy-bootstrap-dos-dev:
-      name: Run bootstrap for dos dev account
-      uses: ./.github/workflows/deploy-bootstrap.yaml
-      with:
-        ENV: dev
-      secrets: inherit
-    deploy-bootstrap-dos-test:
-      name: Run bootstrap for dos test account
-      uses: ./.github/workflows/deploy-bootstrap.yaml
-      with:
-        ENV: test
-      secrets: inherit
+  derive-tf-versions:
+    name: Derive terraform version
+    uses: ./.github/workflows/derive-tf-version.yaml
+  deploy-bootstrap-dos-dev:
+    name: Run bootstrap for dos dev account
+    needs: derive-tf-versions
+    uses: ./.github/workflows/deploy-bootstrap.yaml
+    with:
+      github_environment: dev
+      tf_version: ${{ needs.derive-tf-versions.outputs.maxVersion }}
+    secrets: inherit
+  deploy-bootstrap-dos-test:
+    name: Run bootstrap for dos test account
+    needs: derive-tf-versions
+    uses: ./.github/workflows/deploy-bootstrap.yaml
+    with:
+      github_environment: test
+      tf_version: ${{ needs.derive-tf-versions.outputs.maxVersion }}
+    secrets: inherit
